# meta-fetcher

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: check-and-test.yml
src/: lib.rs
